--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,62 @@
 :root {
     --primary-color: ;
-    --secondary-color: ;
+    --secondary-color: darkslategray;
     --tertiary-color: ;
 }
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
-    color: brown;
+    color: cadetblue;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 header {
     padding: 20px 35px;
-    background-color: dimgray;
+    background-color: darkslategray;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 9999;
 }
+
+header a {
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+header nav {
+    margin: 7px 0;
+}
+
+header nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+
+header nav ul li a {
+    padding: 10px 15px;
+    font-weight: lighter;
+    font-size: 1.55vw;
+}
+
+header nav ul li a:hover {
+    background: var(--primary-color);
+    color: cadetblue;
+    border-radius: 15px;
+    text-shadow: none;
+}
+
 .hero {
     background-image: url(../Images/screen-0.jpg );
     background-size: cover;
@@ -27,3 +66,145 @@ header {
     flex-wrap: wrap;
     align-items: flex-start;
 }
+
+.hero h2 {
+    font-weight: bold;
+}
+
+.hero h3 {
+    font-weight: bolder;
+}
+
+section {
+    padding: 60px;
+}
+
+.box-text {
+    display: flex;
+    border-radius: 15px;
+}
+
+.box-text:hover {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
+}
+
+.section-title {
+    font-size: 46px;
+    color: var(--primary-color);
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: left;
+    margin: auto;
+}
+
+.contact-me iframe {
+    width: 300px;
+    border: 15px solid;
+    padding: 50px;
+    margin: 20px;
+}
+
+footer {
+    background-color: var(--secondary-color);
+    width: 100%;
+    padding: 40px 35px;
+    display: flex;
+}
+
+footer h2 {
+    color: var(--primary-color);
+    font-size: 30px;
+    font-weight: bold;
+    text-align: center;
+}
+
+/* Media Querries Start */
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header {
+        padding: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+
+    footer h2,
+    footer div {
+        text-align: center;
+        width: 100%;
+    }
+
+    .hero-cta,
+    .hero-form {
+        width: 100%;
+    }
+
+    .hero-cta {
+        text-align: center;
+    }
+
+    .section-title {
+        width: 80%;
+    }
+
+    .trainer {
+        flex: 0 70%;
+    }
+
+    .contact-info iframe {
+        flex: 1 100%;
+    }
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+    section {
+        padding: 30px 15px;
+    }
+
+    .step h3 {
+        flex: 1 100%;
+        text-align: center;
+    }
+
+    .step-info {
+        flex: 2 100%;
+        text-align: center;
+        justify-content: center;
+    }
+
+    .step-img {
+        flex: 0 32%;
+        margin-right: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    .step-text {
+        flex: 100%;
+    }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    
