corrected media querries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ header nav ul li a:hover {
 section {
     padding: 60px;
 }
+
 .work {
     flex-wrap: wrap;
 }
@@ -157,21 +158,8 @@ footer h2 {
         width: 100%;
     }
 
-    .hero-cta,
-    .hero-form {
-        width: 100%;
-    }
-
-    .hero-cta {
-        text-align: center;
-    }
-
     .section-title {
         width: 80%;
-    }
-
-    .trainer {
-        flex: 0 70%;
     }
 
     .contact-info iframe {
@@ -184,28 +172,6 @@ footer h2 {
     section {
         padding: 30px 15px;
     }
-
-    .step h3 {
-        flex: 1 100%;
-        text-align: center;
-    }
-
-    .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
-    }
-
-    .step-img {
-        flex: 0 32%;
-        margin-right: 0;
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
-
-    .step-text {
-        flex: 100%;
-    }
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
@@ -214,22 +180,26 @@ footer h2 {
         width: 95%;
     }
 
-    .intro p {
-        width: 100%;
+    .hero {
+        justify-content: center;
     }
 
-    .trainer {
-        flex: 0 100%;
-    } 
+    .intro p {
+        width: 95%;
+    }
+
     .boxes {
         flex: 0 100%;
     }
+
     .box-text {
         flex: 0 100%;
     }
+
     .work {
         flex: 0 100%;
     }
+
     .contact-info {
         text-align: center;
     }
